# digital_amber

./: .gitignore  AUDIOBOOK.md  BUILD.md  README.md  amazon_description_formatted.html  art_concepts.yaml  index_template.md  pyproject.toml  version.json
docs/: CNAME  README.html  about_the_author.html  acknowledgements.html  chapter_1.html  chapter_10.html  chapter_11.html  chapter_12.html  chapter_13.html  chapter_14.html  chapter_15.html  chapter_16.html  chapter_17.html  chapter_18.html  chapter_19.html  chapter_2.html  chapter_20.html  chapter_21.html  chapter_22.html  chapter_23.html  chapter_24.html  chapter_3.html  chapter_4.html  chapter_5.html  chapter_6.html  chapter_7.html  chapter_8.html  chapter_9.html  dedication.html  epilogue.html  foreword.html  index.html
scripts/: build_all.py  build_audio.py  build_audio_kokoro.py  build_audio_kokoro_final.py  build_audio_kokoro_proper.py  build_audio_simple.py  build_epub.py  build_epub_simple.py  build_kindle.py  build_pages.py  build_pages_premium.py  build_pdf.py  create_audiobook_video.py  create_voice_samples.py  docx_to_md_converter.py  generate_art.py  generate_yaml_art.py  main.py  optimize_images.py  youtube_upload.py
story/: README.md  about_the_author.md  acknowledgements.md  chapter_1.md  chapter_10.md  chapter_11.md  chapter_12.md  chapter_13.md  chapter_14.md  chapter_15.md  chapter_16.md  chapter_17.md  chapter_18.md  chapter_19.md  chapter_2.md  chapter_20.md  chapter_21.md  chapter_22.md  chapter_23.md  chapter_24.md  chapter_3.md  chapter_4.md  chapter_5.md  chapter_6.md  chapter_7.md  (+6 more)
(+119 files in other folders)
