[project]
name = "digital-amber"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mammoth>=1.11.0",
    "python-docx>=1.2.0",
    "markdown>=3.5.0",
    "weasyprint>=60.0",
    "ebooklib>=0.18",
    "replicate>=0.25.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.3",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "tts>=0.22.0",
    "bark>=0.1.5",
    "kokoro>=0.9.4",
    "soundfile>=0.13.1",
    "misaki[en]>=0.9.4",
    "pip>=25.2",
    "moviepy>=1.0.3",
    "matplotlib>=3.8.4",
    "pillow>=11.3.0",
    "numpy>=1.22.0",
    "opencv-python>=4.11.0.86",
    "librosa>=0.10.0",
    "whisper-timestamped>=1.15.9",
    "cupy-cuda12x>=13.6.0",
    "av>=15.1.0",
    "moderngl>=5.12.0",
    "tqdm>=4.67.1",
]
